# scikit-automate

./: LICENSE  Makefile  README.md  example.py  setup.cfg
skauto/: cluster.py
skautomate/: base.py  dummy.py  ensemble.py  linear_model.py  neighbors.py  svm.py
