[metadata]
name = scikit-automate
author = Joshua Unrau
author_email = contact@joshuaunrau.com
version = 0.0.1
description = Toolkit for Automated Implementation of Scikit-Learn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshunrau/scikit-automate
keywords = scikit-learn, automate
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
  scikit_learn==1.1.1
  scikit_optimize==0.9.0